--- a/project/build.properties
+++ b/project/build.properties
@@ -1,7 +1,7 @@
 #Project properties
 #Sun Apr 04 07:58:59 EDT 2010
 project.organization=org.clapper
-project.name=stringtemplate
+project.name=scalasti
 sbt.version=0.7.1
 project.version=0.1
 project.version=0.4.2
