--- a/project/build.properties
+++ b/project/build.properties
@@ -5,5 +5,5 @@ project.name=scalasti
 sbt.version=0.7.3
 project.version=0.2
 def.scala.version=2.7.7
-build.scala.versions=2.8.0.Beta1
+build.scala.versions=2.8.0.RC1
 project.initialize=false
