--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=org.clapper
 project.name=scalasti
 sbt.version=0.7.4
-project.version=0.4
+project.version=0.4.1
 def.scala.version=2.7.7
-build.scala.versions=2.8.0.RC5 2.8.0.RC3
+build.scala.versions=2.8.0.RC7 2.8.0.RC5 2.8.0.RC3
 project.initialize=false
