--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 #Sun Apr 04 07:58:59 EDT 2010
 project.organization=org.clapper
 project.name=scalasti
-sbt.version=0.7.4
-project.version=0.5.2
+sbt.version=0.7.7
+project.version=0.5.3
 def.scala.version=2.7.7
-build.scala.versions=2.8.1 2.8.0
+build.scala.versions=2.9.0 2.8.1 2.8.0
 project.initialize=false
